Categorical tree on the left-side: early prototype

--- a/app/views/dataset/cluster.scala.html
+++ b/app/views/dataset/cluster.scala.html
@@ -2,7 +2,7 @@
 @import views.html.layout.main
 @import views.html.chart.highcharts.highchartsJsImport
 @import views.html.elements._
-@import views.html.dataset.datasetSubNavWithJs
+@import views.html.dataset.{datasetSubNavWithJs, datasetMenu}
 @import views.html.mlRun.{inputFieldAndFilterResources, mlElements, trainingSettingFields}
 @import play.api.i18n.Messages
 @import org.ada.server.models.{DataSpaceMetaInfo, FilterShowFieldStyle}
