--- a/app/views/dataset/widgetsScreen.scala.html
+++ b/app/views/dataset/widgetsScreen.scala.html
@@ -3,7 +3,7 @@
 @import reactivemongo.play.json.BSONFormats._
 @import views.html.layout.main
 @import views.html.chart.highcharts.highchartsJsImport
-@import views.html.dataset.datasetSubNavWithJs
+@import views.html.dataset.{dataSetFullMenu, datasetSubNavWithJs}
 @import views.html.dataset.filter.{dataSetFilter, dataSetFilterJs}
 @import views.html.dataview.dataViewSelectionModal
 @import views.html.dataset.fixedTableRow
@@ -296,7 +296,7 @@
     @extraBottomResources
 }
 
-@main(title, Some(datasetMenu(dataSpaceMetaInfos)), Some(datasetSubNavWithJs(setting)), None, Some(bottomResources)) {
+@main(title, Some(dataSetFullMenu(dataSpaceMetaInfos, dataSetRouter)), Some(datasetSubNavWithJs(setting)), None, Some(bottomResources)) {
 
     <div class="page-header">
         <h3>
