Categorical tree on the left side with a field interaction.

--- a/app/views/dataset/comparison.scala.html
+++ b/app/views/dataset/comparison.scala.html
@@ -44,6 +44,18 @@
             });
 
             activateAllFilters(function(filterOrId) {calcComparison()})
+
+            $('#sideCategoricalTree').on('nodeSelected', function (event, data) {
+                $('#inputDiv #fieldName').val(data.id)
+                $('#inputDiv #fieldTypeahead').val(data.text)
+                calcComparison();
+            });
+
+            enableFieldDragover(
+                $('#inputDiv #fieldName'),
+                $('#inputDiv #fieldTypeahead'),
+                calcComparison
+            )
         });
 
         function addNewFilter() {
