--- a/app/views/dataset/pearsonCorrelation.scala.html
+++ b/app/views/dataset/pearsonCorrelation.scala.html
@@ -55,6 +55,19 @@
             activateAllFilters(function(filterOrId) {calcCorrelations()});
 
             $("#heatmapDiv").ada_charts({chartType: 'heatmap'})
+
+            $('#sideCategoricalTree').on('nodeSelected', function (event, data) {
+                if(["field-Date", "field-Integer", "field-Double"].includes(data.type)) {
+                    var newRow = {
+                        "fieldName": data.id,
+                        "fieldTypeahead": data.text
+                    };
+
+                    $('#fieldNameDiv').dynamicTable('addTableRow', newRow)
+
+                    calcCorrelations()
+                }
+            });
         });
 
         function calcCorrelations() {
