--- a/app/views/filter/categoricalTree.scala.html
+++ b/app/views/filter/categoricalTree.scala.html
@@ -31,8 +31,8 @@
         "field-" + FieldTypeId.Double -> Json.obj("icon" -> "glyphicon glyphicon-stats"),
         "field-" + FieldTypeId.Integer -> Json.obj("icon" -> "glyphicon glyphicon-signal"),
         "field-" + FieldTypeId.Boolean -> Json.obj("icon" -> "glyphicon glyphicon-check"),
-        "field-" + FieldTypeId.Enum -> Json.obj("icon" -> "glyphicon glyphicon-font"),
-        "field-" + FieldTypeId.String -> Json.obj("icon" -> "glyphicon glyphicon-bold"),
+        "field-" + FieldTypeId.Enum -> Json.obj("icon" -> "glyphicon glyphicon-list-alt"),
+        "field-" + FieldTypeId.String -> Json.obj("icon" -> "glyphicon glyphicon-text-size"),
         "field-" + FieldTypeId.Date -> Json.obj("icon" -> "glyphicon glyphicon-calendar"),
         "field-" + FieldTypeId.Json -> Json.obj("icon" -> "glyphicon glyphicon-book")
     ),
