--- a/app/views/filter/jsTree.scala.html
+++ b/app/views/filter/jsTree.scala.html
@@ -11,10 +11,10 @@
 )
 
 <div class="row jsTree-filter">
-    <div class="col-md-9">
-        <input id="@{treeElementId}-Search-Input" class="jsTree-search-input form-control" placeholder="Field Name or Label"></input>
+    <div class="col-md-7">
+        <input id="@{treeElementId}-Search-Input" class="jsTree-search-input form-control" placeholder="Field Name"></input>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-5 pull-right">
         <a class="btn btn-info btn-sm" id="collapseAll" href="#" data-toggle="tooltip" title="Collapse All" onclick="$('#@{treeElementId}').jstree('close_all');return false;">
             <span class="glyphicon glyphicon-resize-small" aria-hidden="true"></span>
         </a>
