--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -45,10 +45,10 @@
 
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="menu col-md-1-75 col-sm-12">
+                <div class="menu col-md-2 col-sm-12">
                     @sideBar.getOrElse("")
                 </div>
-                <div id="contentDiv" class="col-md-8-5 col-sm-12">
+                <div id="contentDiv" class="col-md-8-25 col-sm-12">
                     @if(topContentBar.isDefined) {
                         <div class="row-fluid">
                             @topContentBar.get
